Closed
Bug 103360
Opened 24 years ago
Closed 24 years ago
Table cell with colspan > 1 prevents joining all selected cells
Categories
(SeaMonkey :: Composer, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.7
People
(Reporter: TucsonTester2, Assigned: cmanske)
Details
(Whiteboard: EDITORBASE)
Attachments
(2 files)
|
883 bytes,
text/html
|
Details | |
|
4.10 KB,
patch
|
akkzilla
:
review+
kinmoz
:
superreview+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:0.9.4)
Gecko/20011002 Netscape6/6.2
BuildID: 20011002
If you join two cells on a row, and then select all cells on that row and use
join selected cells to join all cells on that row, the cells will join, but
additional cell(s) will be added to that row, but not to other rows in the
table. This only appears to happen if certain conditions are met. For this to
happen, when you join the first pair of cells, there needs to be at least 1
column to the left of the joined cell, and at least 2 columns to the right of
the joined cell. Then, when you select all cells on the row and join them, the
extra cell(s) will be added. If these conditions are not met, the problem does
not occur.
Reproducible: Always
Steps to Reproduce:
1.Open a blank page in composer
2.Click on table and create a table with 2 rows and 6 columns
3.Number the cells in the first row 1,2,3,4,5,6
4.Right click on cell 2 and select join with the cell to right
5.While holding down ctrl key, click on each cell in the first row so all cells
in first row are selected.
6.Right click and select join selected cells
Actual Results: The first row has a cell with 1235, then an empty cell, then
cell 4, then cell 6. The second row still has 6 cells, but they are all aligned
under cell 1235. There is blank space with no cells under the three cells which
were added to the first line
Expected Results: Expected the first row to have 1 cell with 123456 in it. The
second row of six cells aligned underneath it.
In Step 4 of steps to reproduce, if you join cells 3 and 4 (instead of 2 and 3)
and then proceed, you will get two cells on the first row. One will have
123456, the other will be empty. Second row will have all 6 cells aligned under
cell 123456, blank space with no cell under the extra cell.
If in step 4 you select cells 4 and 5 (or 1 and 2, or 5 and 6), then the table
looks as expected. Larger tables behave the same way. The more columns to the
right of the original pair of joined eells, the more columns are added.
Comment 1•24 years ago
|
||
Confirmed. (BuildID: 2001100903)
Comment 2•24 years ago
|
||
Seems wrong to me, EDITORBASE
Assignee: syd → cmanske
Whiteboard: EDITORBASE
| Assignee | ||
Comment 4•24 years ago
|
||
Interesting.
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: --- → mozilla0.9.6
| Assignee | ||
Comment 5•24 years ago
|
||
Changing summary to better describe the problem.
Summary: When using join selected cells, extra column(s) added to table under certain circumstances → Table cell with colspan > 1 prevents joining all selected cells
| Assignee | ||
Comment 6•24 years ago
|
||
| Assignee | ||
Updated•24 years ago
|
Comment on attachment 56755 [details] [diff] [review]
Fixes logic when merging cells.
sr=kin@netscape.com
Attachment #56755 -
Flags: superreview+
Whiteboard: EDITORBASE, FIX IN HAND, need r=,sr= → EDITORBASE, FIX IN HAND, need r=
| Assignee | ||
Comment 8•24 years ago
|
||
Still needs r=.
No rush.
Target Milestone: mozilla0.9.6 → mozilla0.9.7
Comment 9•24 years ago
|
||
Comment on attachment 56755 [details] [diff] [review]
Fixes logic when merging cells.
r=akkana
Attachment #56755 -
Flags: review+
| Assignee | ||
Updated•24 years ago
|
Whiteboard: EDITORBASE, FIX IN HAND, need r= → EDITORBASE, FIX IN HAND
| Assignee | ||
Comment 10•24 years ago
|
||
checked in
Comment 11•24 years ago
|
||
I'm curious if this is also a problem in the browser.. not just the editor.. I
notice as more fixes make it in composer will the 'browser's' rendering of
composer bug testcases get fixed then?
| Assignee | ||
Comment 13•24 years ago
|
||
This fix was for Composer table editing code and has nothing to do with table
rendering, thus there's no effect on the browser.
Updated•21 years ago
|
Product: Browser → Seamonkey
You need to log in
before you can comment on or make changes to this bug.
Description
•