Fixed join cells table bug 103360, r=akkana, sr=kin